added feature #【剑指Offer II】P16 不含重复字符的最长子字符串; 优化makefile

--- a/offer2/Makefile
+++ b/offer2/Makefile
@@ -18,7 +18,10 @@ all : $(COBJS)
 test : $(COBJS)
 	@cd $(TEST_PATH) && make
 
-.PHONY: clean cleanall
+run_test:
+	@./gtest/run_test
+
+.PHONY: clean
 
 $(COBJS) : obj/%.o : src/%.cpp
 	@echo compiling $(notdir $<)
@@ -26,8 +29,5 @@ $(COBJS) : obj/%.o : src/%.cpp
 	@$(CC) $(INCLUDE) -c $< -o $@
 
 clean:
-	rm -rf obj
-
-cleanall:
 	rm -rf obj
 	@cd $(TEST_PATH) && make clean
