added featue#【剑指Offer】面试题7: 重建二叉树

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "unordered_map": "c"
+        "unordered_map": "c",
+        "queue": "cpp",
+        "exception": "cpp"
     }
 }
