added featue#【剑指Offer】面试题9: 用两个栈实现队列

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "unordered_map": "c",
         "queue": "cpp",
-        "exception": "cpp"
+        "exception": "cpp",
+        "stack": "cpp"
     }
 }
