added featue#【剑指Offer】5.3 时间效率与空间效率第平衡 面试题49: 丑数; 面试题50: 第一个只出现一次的字符; 面试题51: 数组中的逆序对; 面试题52: 两个链表的第一个公共节点;

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,16 @@
         "memory_resource": "cpp",
         "ranges": "cpp",
         "stop_token": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "__functional_03": "cpp",
+        "cassert": "cpp",
+        "ccomplex": "cpp",
+        "cerrno": "cpp",
+        "cfloat": "cpp",
+        "ciso646": "cpp",
+        "climits": "cpp",
+        "ctgmath": "cpp",
+        "cstdbool": "cpp",
+        "*.inc": "cpp"
     }
 }
