added featue#【剑指Offer】6.4 抽象建模能力 面试题60: n个骰子的点数 面试题61: 扑克牌中的顺子 面试题62: 圆圈中最后剩下的数字 面试题63: 股票的最大利润

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,7 @@
         "climits": "cpp",
         "ctgmath": "cpp",
         "cstdbool": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "list": "cpp"
     }
 }
